added full check for tip (user.tip !+ author.product)

--- a/main/templates/tip/delete_tip.html
+++ b/main/templates/tip/delete_tip.html
@@ -1,5 +1,5 @@
 {% extends 'product/detail_product.html' %}
-{% block title %} {{ tip.product_name }} - {{ tip.value_tip }} {% endblock %}
+{% block title %} {{ tips.product_name }} - {{ tips.value_tip }} {% endblock %}
 {% load static %}
 {% load  bootstrap4 %}
 {% block content %}
