--- a/main/templates/product/create_product.html
+++ b/main/templates/product/create_product.html
@@ -1,5 +1,6 @@
 {% extends 'main/main.html' %}
 {% load  bootstrap4 %}
+{% load static %}
 {% block title %}Добавление объявлений - профиль {{ user.username }}{% endblock %}
 
 {% block content %}
@@ -12,3 +13,5 @@
 
 </form>
 {% endblock %}
+
+
