--- a/main/templates/cart/cart_detail.html
+++ b/main/templates/cart/cart_detail.html
@@ -1,6 +1,6 @@
 {% extends 'main/main.html' %}
 {% load static %}
-
+{% load thumbnail %}
 {% block title %}
   Корзина покупок
 {% endblock %}
@@ -9,15 +9,13 @@
   <h1>Корзина покупок</h1>
   <table class="cart">
     <thead>
-
       <tr>
         <th>Картинка</th>
         <th>Товар</th>
-        <th>Обновить кол-во</th>
-        <th>Удалить</th>
-        <th>Кол-во</th>
+        <th>Количество</th>
         <th>Цена за шт</th>
         <th>Общая стоимость</th>
+        <th>Удалить</th>
       </tr>
     </thead>
     <tbody>
@@ -25,32 +23,29 @@
         {% with pp=item.pp %}
           <tr>
             <td>
-              <a href="{{ pp.get_absolute_url }}">
-                <img src="{% if pp.image %}{{ bb.image.url }}{% else %}{% static 'main/empty.jpg' %}{% endif %}">
-              </a>
+              <a href="{{ url }}{{ all }}" >
+
+{% if pp.image %}
+<img class="mr-3 " src="{% thumbnail  pp.image 'default' %} ">
+{% else %}
+<img  class="mr-3" src="{% static 'main/empty.jpg '%}">
+{% endif %}
+</a>
+
             </td>
-            <td>{{ pp.title }}</td>
-            <td>
-              <form action="{% url 'cart:cart_add' pp.pk %}" method="post">
-                {{ item.update_quantity_form.quantity }}
-                {{ item.update_quantity_form.update }}
-                <input type="submit" value="Обновить">
-                {% csrf_token %}
-              </form>
-            </td>
-            <td><a href="{% url 'cart:cart_remove' pp.pk %}">Удалить</a></td>
+            <td>{{ pp.name }}</td>
             <td>
               {{ item.quantity }}
             </td>
             <td class="num">${{ item.price }}</td>
             <td class="num">${{ item.total_price }}</td>
+            <td><a href="{% url 'cart:cart_remove' pp.pk %}">Удалить</a></td>
           </tr>
         {% endwith %}
       {% endfor %}
       <tr class="total">
-        <td>Всего</td>
-        <td colspan="4"></td>
-        <td class="num">${{ cart.get_total_price }}</td>
+        <td colspan="5"></td>
+        <td class="num">Всего $ {{ cart.get_total_price }}</td>
       </tr>
     </tbody>
   </table>
