--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -10,6 +10,7 @@
   <title>{% block title %} Главная {% endblock %} - Аукцион</title>
   {% bootstrap_css %}
   <link rel="stylesheet" type="text/css" href="{% static 'main/style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'main/table.css' %}">
   {% bootstrap_javascript jquery='slim' %}
 
 </head>
@@ -40,6 +41,8 @@
 <li  class="nav-item"><a  class="nav-link"
 href= "{% url 'main:login' %}" >Bxoд</a></li>
     {% endif %}
+    <li  class="nav-item"><a  class="nav-link"
+href= "{% url 'cart:cart_detail' %}" >Корзина</a></li>
   </ul>
 </div>
 <div  class=" row">
